--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,13 @@
   </properties>
 
   <dependencies>
+
+    <dependency>
+        <groupId>org.json</groupId>
+        <artifactId>json</artifactId>
+        <version>20231013</version>
+    </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
